--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   url_launcher: ^5.4.5
   share: ^0.6.4
+  animated_text_kit: ^2.0.0
+  drawing_animation: ^0.1.1
+  google_fonts: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -49,11 +52,16 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/flutter_con_India_title.svg
     - assets/
+    - assets/Images/
+    - assets/Images/cover_Images/
+    - assets/Images/extra/
+    - assets/Images/Logos/
+    - assets/Images/socialIcons/
+    - assets/Images/Logos/FlutterConLogos/
+    - assets/Images/Logos/Organizer_Logo/
+    - assets/Images/Logos/Sponsors_Logo/
     - assets/json/
-    - assets/Organizer_Logo/
-    - assets/Sponsors_Logo/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
