--- a/web/manifest.json
+++ b/web/manifest.json
@@ -5,7 +5,7 @@
     "display": "minimal-ui",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter application.",
+    "description": "This is a New Website of Flutter India Conference 2020.FlutterCon India is an online event driven by Indian Flutter Communities to gather all Flutter passionates and learn to create beautiful apps! Our goal is to share Flutter knowledge, improve Flutter skills, and expand the Flutter community.  The 1st edition of FlutterCon India will take place on May 1-3, 2020.  Best-in-class speakers from Flutter community around the globe will be presenting live on various Flutter topics.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
